--- a/resources/templates/password.html
+++ b/resources/templates/password.html
@@ -9,7 +9,7 @@
 		<script>setMenuFocus("Login")</script>
 
         <div style="padding: 50px 20px 50px 20px;">
-        	<form class="blue-border r-2 pd-3 fit-content form-grid form-grid-1" style="margin: 0px auto 0px auto;" action="/password" method="POST">
+        	<form class="blue-border r-2 fit-content form-grid form-grid-1" style="margin: 0px auto 0px auto;" action="/password" method="POST">
 				<h2 style="margin-top: 0; margin-bottom: 40px;">Change Password</h2>
 				<input style="display: none;" type="text" name='user' path="user" th:value="${param.id}">
 				<span>Old password:</span>
