--- a/resources/templates/studio/edit/edit_lines.html
+++ b/resources/templates/studio/edit/edit_lines.html
@@ -42,92 +42,58 @@
 					<a th:unless="${exists}" class="button red mg-0 width-100" href="/studio/lines">Cancel</a>
 					<input type="submit" value="Save" class="mg-0">
 				</div>
-				<div class="row blue-border r-2 box-table" style="max-width: 883px; margin: 0px auto;">
-					<div class="overflow">
-						<table class="pd-0 mg-0" style="height: 1px;" id="stations">
-							<tr>
-								<th style="min-width: 150px;">Station</th>
-								<th>Pl.</th>
-								<th>Time</th>
-								<th style="min-width: 100px;">Cancelled</th>
-								<th>Delay</th>
-								<th>New Pl.</th>
-								<th style="min-width: 100px;">Passed</th>
-								<th></th>
-							</tr>
-							<tr index="INDEX" id="template">
-								<td>
-									<input list="stationNames" id="stationsINDEX.id" name="stations[INDEX].id"/>
-		  							<input style="display: none;" type="text" id="stationsINDEX.name" name="stations[INDEX].name">
-								</td>
-								<td>
-									<input type="number" min="1" max="9999" required id="stationsINDEX.platform" name="stations[INDEX].platform" value="1">
-								</td>
-								<td>
-									<input style="display: none;" type="time" required id="stationsINDEX.departure" name="stations[INDEX].departure" value="00:00">
-									<input type="number" min="0" max="9999" required id="stationsINDEX.travelTimeFromLastStation" name="stations[INDEX].travelTimeFromLastStation" value="0">
-								</td>
-								<td>
-									<select id="stationsINDEX.cancelled" name="stations[INDEX].cancelled">
-		    							<option value="false" selected="selected">False</option>
-		    							<option value="true">True</option>
-		  							</select>
-								</td>
-								<td>
-									<input type="number" min="0" max="9999" required id="stationsINDEX.delay" name="stations[INDEX].delay" value="0">
-								</td>
-								<td>
-									<input type="number" min="0" max="9999" required id="stationsINDEX.changedPlatform" name="stations[INDEX].changedPlatform" value="0">
-								</td>
-								<td>
-									<select id="stationsINDEX.passed" name="stations[INDEX].passed">
-		    							<option value="false" selected="selected">False</option>
-		    							<option value="true">True</option>
-		  							</select>
-								</td>
-								<td>
-									<a class="button" onclick="removeStation(INDEX)">Remove</a>
-								</td>
-							</tr>
-							<tr th:each="station, status : *{stations}" th:attrappend="index=${status.index}">
-								<td>
-									<input list="stationNames" th:field="*{stations[__${status.index}__].id}"/>
-		  							<input style="display: none;" type="text" th:field="*{stations[__${status.index}__].name}">
-								</td>
-								<td>
-									<input type="number" th:field="*{stations[__${status.index}__].platform}" min="1" max="9999" required>
-								</td>
-								<td>
-									<input style="display: none;" type="time" th:field="*{stations[__${status.index}__].departure}" required>
-									<input type="number" th:field="*{stations[__${status.index}__].travelTimeFromLastStation}" min="0" max="9999" required>
-								</td>
-								<td>
-									<select th:field="*{stations[__${status.index}__].cancelled}">
-		    							<option value="false" th:selected="!*{stations[__${status.index}__].cancelled}">False</option>
-		    							<option value="true" th:selected="*{stations[__${status.index}__].cancelled}">True</option>
-		  							</select>
-								</td>
-								<td>
-									<input type="number" th:field="*{stations[__${status.index}__].delay}" min="0" max="9999" required>
-								</td>
-								<td>
-									<input type="number" th:field="*{stations[__${status.index}__].changedPlatform}" min="0" max="9999" required>
-								</td>
-								<td>
-									<select th:field="*{stations[__${status.index}__].passed}">
-		    							<option value="false" th:selected="!*{stations[__${status.index}__].passed}">False</option>
-		    							<option value="true" th:selected="*{stations[__${status.index}__].passed}">True</option>
-		  							</select>
-								</td>
-								<td>
-									<a class="button" th:attrappend="onclick=${'removeStation(' + status.index + ')'}">Remove</a>
-								</td>
-							</tr>
-						</table>
+				<div class="row blue-border r-2 fit-content overflow" style="margin: 0px auto;">
+					<div class="overflow form-grid form-grid-stations" style="padding-bottom: 0;" id="stations">
+						<div style="display: contents; font-size: 15px;">
+							<span>Station</span>
+							<span>Pl.</span>
+							<span>Time</span>
+							<span>Cancelled</span>
+							<span>Delay</span>
+							<span>New Pl.</span>
+							<span>Passed</span>
+							<span></span>
+						</div>
+						<div index="INDEX" style="display: contents;" id="template">
+							<input list="stationNames" id="stationsINDEX.id" name="stations[INDEX].id"/>
+		  					<input style="display: none;" type="text" id="stationsINDEX.name" name="stations[INDEX].name">
+		  					<input type="number" min="1" max="9999" required id="stationsINDEX.platform" name="stations[INDEX].platform" value="1">
+							<input style="display: none;" type="time" required id="stationsINDEX.departure" name="stations[INDEX].departure" value="00:00">
+							<input type="number" min="0" max="9999" required id="stationsINDEX.travelTimeFromLastStation" name="stations[INDEX].travelTimeFromLastStation" value="0">
+							<select id="stationsINDEX.cancelled" name="stations[INDEX].cancelled">
+		    					<option value="false" selected="selected">False</option>
+		    					<option value="true">True</option>
+		  					</select>
+		  					<input type="number" min="0" max="9999" required id="stationsINDEX.delay" name="stations[INDEX].delay" value="0">
+							<input type="number" min="0" max="9999" required id="stationsINDEX.changedPlatform" name="stations[INDEX].changedPlatform" value="0">
+							<select id="stationsINDEX.passed" name="stations[INDEX].passed">
+		    					<option value="false" selected="selected">False</option>
+		    					<option value="true">True</option>
+		  					</select>
+		  					<span><a class="button" onclick="removeStation(INDEX)">Remove</a></span>
+						</div>
+						<div th:each="station, status : *{stations}" th:attrappend="index=${status.index}" style="display: contents">
+							<input list="stationNames" th:field="*{stations[__${status.index}__].id}"/>
+		  					<input style="display: none;" type="text" th:field="*{stations[__${status.index}__].name}">
+							<input type="number" th:field="*{stations[__${status.index}__].platform}" min="1" max="9999" required>
+							<input style="display: none;" type="time" th:field="*{stations[__${status.index}__].departure}" required>
+							<input type="number" th:field="*{stations[__${status.index}__].travelTimeFromLastStation}" min="0" max="9999" required>
+							<select th:field="*{stations[__${status.index}__].cancelled}">
+		    					<option value="false" th:selected="!*{stations[__${status.index}__].cancelled}">False</option>
+		    					<option value="true" th:selected="*{stations[__${status.index}__].cancelled}">True</option>
+		  					</select>
+							<input type="number" th:field="*{stations[__${status.index}__].delay}" min="0" max="9999" required>
+							<input type="number" th:field="*{stations[__${status.index}__].changedPlatform}" min="0" max="9999" required>
+							<select th:field="*{stations[__${status.index}__].passed}">
+		    					<option value="false" th:selected="!*{stations[__${status.index}__].passed}">False</option>
+		    					<option value="true" th:selected="*{stations[__${status.index}__].passed}">True</option>
+							</select>
+		  					<span><a class="button" th:attrappend="onclick=${'removeStation(' + status.index + ')'}">Remove</a></span>
+						</div>
 					</div>
-					<div style="display:flex; gap: 20px;"><div class="width-100"></div>
+					<div class="form-grid" style="display:flex; gap: 20px; padding-top: 0px;"><div class="width-100"></div>
 						<input type="submit" value="Save" class="mg-0 button" style="display: inline-block; width: auto;">
-						<a class="button" style="margin-left: auto;" onclick="addStation()">Add Station</a>
+						<a class="button" onclick="addStation()">Add Station</a>
 					</div>
 					<datalist id="stationNames">
 						<option th:each="stationObject : ${stationObjects}" th:value="${stationObject.id}" th:text="${stationObject.id} + ' (' + ${stationObject.name} + ')'"></option>
