--- a/resources/templates/forgot.html
+++ b/resources/templates/forgot.html
@@ -9,7 +9,7 @@
 		<script>setMenuFocus("Login")</script>
 
         <div style="padding: 50px 20px 50px 20px;">
-        	<form class="blue-border r-2 pd-3 fit-content form-grid form-grid-1" style="margin: 0px auto 0px auto;" action="/forgot" method="POST">
+        	<form class="blue-border r-2 fit-content form-grid form-grid-1" style="margin: 0px auto 0px auto;" action="/forgot" method="POST">
 				<h2 style="margin-top: 0; margin-bottom: 40px;">Forgot password</h2>
 				<span>Email:</span>
 				<input type="email" name='email' path="email" required>
