--- a/resources/templates/login.html
+++ b/resources/templates/login.html
@@ -9,7 +9,7 @@
 		<script>setMenuFocus("Login")</script>
         
         <div style="padding: 50px 20px 50px 20px;">
-        	<form class="blue-border r-2 pd-3 fit-content form-grid form-grid-1" style="margin: 0px auto 0px auto;" action="login" method="post">
+        	<form class="blue-border r-2 fit-content form-grid form-grid-1" style="margin: 0px auto 0px auto;" action="login" method="post">
         		<h2 style="margin-top: 0; margin-bottom: 40px;">Login</h2>
 				<span>Username:</span>
 				<input type="text" name='username' required>
