--- a/resources/templates/studio/archived.html
+++ b/resources/templates/studio/archived.html
@@ -13,11 +13,11 @@
 		<div class="navigation-content">
 			<div style="margin: 0px auto; padding: 50px 50px; max-width: 1200px;">
 				<div style="display: flex;"><div class="width-100"></div>
-					<a class="button mg-b" th:href="@{/studio/archived/edit}">New Line</a>
+					<a class="button mg-b" th:href="@{/studio/archived/edit}">New Archived</a>
 				</div>	
 				<div class="overflow r-1 nowrap">
 					<table id="reload">
-						<tr>
+						<tr th:if="!${archived.isEmpty()}">
 							<th style="width: fit-content;">ID</th>
 							<th>Departure</th>
 							<th class='width-100'>Name</th>
@@ -27,7 +27,7 @@
 							<th>Driver</th>
 							<th></th>
 						</tr>
-						<tr th:each="line : ${lines}">
+						<tr th:each="line : ${archived}">
 							<td style="width: fit-content;"><span class="transparent-blue r-1" style="padding: 0px 5px;" th:text="${line.id}"></span></td>
 							<td th:text="${line.departure}"></td>
 							<td>
