--- a/resources/templates/studio/edit/edit_stations.html
+++ b/resources/templates/studio/edit/edit_stations.html
@@ -13,7 +13,7 @@
 		<div class="navigation-content overflow" style="padding: 50px 20px;" th:with="exists=${station.id != null and !station.id.isEmpty()}">
 			<div class="blue-border r-2 fit-content" style="margin: 0 auto;">
 				<form class="form-grid form-grid-2" th:action="@{/studio/stations/edit}" th:object="${station}" method="POST">
-	        		<span th:if="${exists}" class="fit-content">ID:</span>
+	        		<span th:if="${exists}">ID:</span>
 					<div th:if="${exists}" class="mg-b"><span class="transparent-blue r-1" style="padding: 0px 5px; font-size: 18px;" th:text="${station.id}"></span></div>
 	        		<span th:style="${exists} ? 'display: none' : ''">ID:</span>
 					<input th:style="${exists} ? 'display: none' : ''" type="text" th:field="*{id}" required>
