Updated form styles

--- a/resources/static/resources/style.css
+++ b/resources/static/resources/style.css
@@ -165,25 +165,37 @@ body {
 /* padding */
 
 .pd-0{padding: 0px !important}
-.pd-1{padding: 5px !important}
-.pd-2{padding: 10px !important}
-.pd-3{padding: 20px !important}
+.pd-5{padding: 5px !important}
+.pd-10{padding: 10px !important}
+.pd-20{padding: 20px !important}
+.pd-30{padding: 30px !important}
+.pd-50{padding: 50px !important}
 
 /* margin */
 
 .mg-0{margin: 0px !important}
-.mg-1{margin: 5px !important}
-.mg-2{margin: 10px !important}
-.mg-3{margin: 20px !important}
+.mg-5{margin: 5px !important}
+.mg-10{margin: 10px !important}
+.mg-20{margin: 20px !important}
+.mg-30{margin: 30px !important}
+.mg-50{margin: 50px !important}
 
+.mg-t{margin-top: 30px !important}
+.mg-l{margin-left: 30px !important}
+.mg-r{margin-right: 30px !important}
 .mg-b{margin-bottom: 30px !important}
+.mg-b-0{margin-bottom: 0px !important}
+
+.mg-center{margin-left: auto !important; margin-right: auto !important}
 
 /* radius */
 
 .r-0{border-radius: 0px !important}
-.r-1{border-radius: 5px !important}
-.r-2{border-radius: 10px !important}
-.r-3{border-radius: 20px!important}
+.r-5{border-radius: 5px !important}
+.r-10{border-radius: 10px !important}
+.r-20{border-radius: 20px!important}
+.r-30{border-radius: 30px !important}
+.r-50{border-radius: 50px!important}
 
 /* overflow */
 
@@ -504,7 +516,11 @@ body {
     box-sizing: border-box;
     width: 100%;
     float: left;
+    padding: 0px 15px;
 }
+
+.row > [class*="col-"]:first-child{padding-left: 0px}
+.row > [class*="col-"]:last-child{padding-right: 0px}
 
 @media only screen and (min-width: 600px){
     .col-sm-1{width: 8.33%;}
@@ -519,9 +535,6 @@ body {
     .col-sm-10{width: 83.33%;}
     .col-sm-11{width: 91.66%;}
     .col-sm-12{width: 100%;}
-    [class*="col-sm-"]{padding: 0px 10px}
-    .row > [class*="col-sm-"]:first-child{padding-left: 0px}
-    .row > [class*="col-sm-"]:last-child{padding-right: 0px}
 }
 
 @media only screen and (min-width: 768px){
@@ -537,9 +550,6 @@ body {
     .col-md-10{width: 83.33%;}
     .col-md-11{width: 91.66%;}
     .col-md-12{width: 100%;}
-    [class*="col-md-"]{padding: 0px 10px}
-    .row > [class*="col-md-"]:first-child{padding-left: 0px}
-    .row > [class*="col-md-"]:last-child{padding-right: 0px}
 }
 
 @media only screen and (min-width: 1024px){
@@ -555,43 +565,7 @@ body {
     .col-xl-10{width: 83.33%;}
     .col-xl-11{width: 91.66%;}
     .col-xl-12{width: 100%;}
-    [class*="col-xl-"]{padding: 0px 10px}
-    .row > [class*="col-xl-"]:first-child{padding-left: 0px}
-    .row > [class*="col-xl-"]:last-child{padding-right: 0px}
 }
-
-[class*="gallery-"]{
-    box-sizing: border-box;
-    display: grid;
-    grid-gap: 20px;
-    overflow-x: hidden;
-}
-
-[class*="gallery-"]:hover{overflow-x: auto;}
-@media (hover: none) {[class*="gallery-"]{overflow-x: auto;}}
-@media screen and (max-width: 768px) {[class*="gallery-"]{overflow-x: auto;}}
-
-[class*="gallery-"] > *{
-    width: auto;
-    float: left;
-}
-
-.gallery-1{grid-template-columns: repeat(1, 6fr);}
-.gallery-2{grid-template-columns: repeat(2, 3fr);}
-.gallery-3{grid-template-columns: repeat(3, 2fr);}
-.gallery-4{grid-template-columns: repeat(4, 1.5fr);}
-
-.grid{
-    display: grid;
-    grid-gap: 20px;
-}
-
-.grid > *{
-    width: auto;
-    float: left;
-}
-
-@media screen and (max-width: 768px) {[class*="gallery-"]{grid-gap: 10px;} .grid{grid-gap: 10px;}}
 
 /* headlines */
 
@@ -617,7 +591,6 @@ input, select, textarea{
     min-height: 40px;
     font-size: 16px;
     padding: 10px;
-    margin-bottom: 30px;
     border-style: solid;
     border-color: #cccccc;
     border-width: 0px;
@@ -628,6 +601,7 @@ input, select, textarea{
 
 textarea{
     height: auto;
+    resize: vertical;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -651,7 +625,7 @@ textarea{
 }
 
 input[type=submit]{
-	font-size: 18px;
+    font-size: 18px;
     box-sizing: border-box;
     min-height: 40px;
     height: 40px;
@@ -667,8 +641,8 @@ input:focus, select:focus, textarea:focus{
 }
 
 .button{
-	font-size: 18px;
-	line-height: 35px;
+    font-size: 18px;
+    line-height: 35px;
     display: inline-block;
     box-sizing: border-box;
     background-color: #004dff;
@@ -689,7 +663,6 @@ textarea, select, input, button {outline: none;}
 /* dropdown */
 
 .dropdown {
-    position: relative;
     display: inline-block;
 }
 
@@ -732,7 +705,6 @@ textarea, select, input, button {outline: none;}
     text-align: left;
     max-width: 230px;
     min-width: 150px;
-    border-radius: 5px;
     padding: 0px 10px;
     line-height: 40px;
     font-size: 18px;
@@ -780,7 +752,7 @@ label{
 
 .media{
     display: grid;
-    grid-gap: 10px;
+    gap: 10px;
     grid-template-columns: 64px auto;
     margin-bottom: 30px;
 }
@@ -1048,6 +1020,7 @@ table td, th{
 /* components */
 
 p{
+    margin: 0px;
     margin-bottom: 30px;
 }
 
@@ -1218,31 +1191,32 @@ a{
     background-color: transparent;
 }
 
-.form-grid{
+[class*="form-grid"]{
+	width: fit-content;
+	margin: 0px auto;
 	display: grid;
-	grid-gap: 0px 30px;
+	gap: 30px;
 	padding: 50px;
+	border: solid 3px #004dff;
+	border-radius: 10px;
+}
+
+[class*="form-grid"] > *:first-child{
+	margin-top: 0px;
+}
+
+[class*="form-grid"] > *:last-child{
+	margin-bottom: 0px;
 }
 
 @media only screen and (max-width: 1024px){
-    .form-grid{padding: 30px}
+    [class*="form-grid"]{padding: 30px}
 }
 
-.form-grid-1{
-	grid-template-columns: minmax(auto, 300px);
-}
-
-.form-grid-2{
-	grid-template-columns: fit-content(100%) minmax(auto, 300px);
-}
-
-.form-grid-4{
-	grid-template-columns: fit-content(100%) minmax(auto, 300px) fit-content(100%) minmax(auto, 300px);
-}
-
-.form-grid-stations{
-	grid-template-columns: minmax(120px, 250px) repeat(2, minmax(60px, 80px)) 80px repeat(2, minmax(60px, 80px)) 80px fit-content(100%);
-}
+.form-grid-1{grid-template-columns: minmax(auto, 300px);}
+.form-grid-2{grid-template-columns: fit-content(100%) minmax(auto, 300px);}
+.form-grid-4{grid-template-columns: fit-content(100%) minmax(auto, 300px) fit-content(100%) minmax(auto, 300px);}
+.form-grid-stations{grid-template-columns: minmax(120px, 250px) repeat(2, minmax(60px, 80px)) 80px repeat(2, minmax(60px, 80px)) 80px fit-content(100%);}
 
 @media only screen and (max-width: 1024px){
 	.form-grid-4{grid-template-columns: fit-content(100%) minmax(auto, 300px);}
