--- a/resources/templates/password.html
+++ b/resources/templates/password.html
@@ -2,22 +2,28 @@
 <html>
     <head>
     	<div th:replace="components :: head"></div>
-        <title>PIS - Login</title>
+        <title>PIS - Password</title>
     </head>
     <body>
 		<div th:replace="components :: menu"></div>
 		<script>setMenuFocus("Login")</script>
 
-        <div style="padding: 50px 20px 50px 20px;">
-        	<form class="blue-border r-2 fit-content form-grid form-grid-1" style="margin: 0px auto 0px auto;" action="/password" method="POST">
-				<h2 style="margin-top: 0; margin-bottom: 40px;">Change Password</h2>
+        <div style="padding: 50px 20px;">
+        	<form class="form-grid-1" action="/password" method="POST">
+				<h2>Change Password</h2>
 				<input style="display: none;" type="text" name='user' path="user" th:value="${param.id}">
-				<span>Old password:</span>
-				<input type="password" name='old-password' path="old-password" required>
-				<span>New password:</span>
-				<input type="password" name='new-password' path="new-password" required>
-				<span>Repeat new password:</span>
-				<input type="password" name='repeat-new-password' path="repeat-new-password" required>
+				<div>
+					<span>Old password:</span>
+					<input type="password" name='old-password' path="old-password" required>
+				</div>
+				<div>
+					<span>New password:</span>
+					<input type="password" name='new-password' path="new-password" required>
+				</div>
+				<div>
+					<span>Repeat new password:</span>
+					<input type="password" name='repeat-new-password' path="repeat-new-password" required>
+				</div>
 				<span class="red-text" th:if="${param.error != null}" th:text="${param.error}"></span>
 				<input style="margin: 40px 0px 0px 0px;" name="submit" type="submit" value="Change Password">
 			</form>
