--- a/resources/templates/login.html
+++ b/resources/templates/login.html
@@ -8,13 +8,17 @@
 		<div th:replace="components :: menu"></div>
 		<script>setMenuFocus("Login")</script>
         
-        <div style="padding: 50px 20px 50px 20px;">
-        	<form class="blue-border r-2 fit-content form-grid form-grid-1" style="margin: 0px auto 0px auto;" action="login" method="post">
-        		<h2 style="margin-top: 0; margin-bottom: 40px;">Login</h2>
-				<span>Username:</span>
-				<input type="text" name='username' required>
-				<span>Password:</span>
-				<input type="password" name='password' required>
+        <div style="padding: 50px 20px;">
+        	<form class="form-grid-1" action="login" method="post">
+        		<h2>Login</h2>
+				<div>
+					<span>Username:</span>
+					<input type="text" name='username' required>
+				</div>
+				<div>
+					<span>Password:</span>
+					<input type="password" name='password' required>
+				</div>
 				<span class="red-text" th:if="${param.failed}">
 					Your credentials aren't correct, please try again!
 				</span>
