--- a/resources/templates/reset.html
+++ b/resources/templates/reset.html
@@ -8,14 +8,18 @@
 		<div th:replace="components :: menu"></div>
 		<script>setMenuFocus("Login")</script>
 
-        <div style="padding: 50px 20px 50px 20px;">
-        	<form class="blue-border r-2 fit-content form-grid form-grid-1" style="margin: 0px auto 0px auto;" action="/reset" method="POST">
-				<h2 style="margin-top: 0; margin-bottom: 40px;">Reset Password</h2>
+        <div style="padding: 50px 20px;">
+        	<form class="form-grid-1"action="/reset" method="POST">
+				<h2>Reset Password</h2>
 				<input style="display: none;" type="text" name='user' path="user" th:value="${param.id}">
-				<span>New password:</span>
-				<input type="password" name='new-password' path="new-password" required>
-				<span>Repeat new password:</span>
-				<input type="password" name='repeat-new-password' path="repeat-new-password" required>
+				<div>
+					<span>New password:</span>
+					<input type="password" name='new-password' path="new-password" required>
+				</div>
+				<div>
+					<span>Repeat new password:</span>
+					<input type="password" name='repeat-new-password' path="repeat-new-password" required>
+				</div>
 				<span class="red-text" th:if="${param.error != null}" th:text="${param.error}"></span>
 				<input style="margin: 40px 0px 0px 0px;" name="submit" type="submit" value="Reset Password">
 			</form>
