--- a/resources/templates/studio/edit/edit_stations.html
+++ b/resources/templates/studio/edit/edit_stations.html
@@ -11,19 +11,19 @@
 		<div th:replace="components :: navigation"></div>
 		<script>setNavigationFocus("Stations")</script>
 		<div class="navigation-content overflow" style="padding: 50px 20px;" th:with="exists=${station.id != null and !station.id.isEmpty()}">
-			<div class="blue-border r-2 fit-content" style="margin: 0 auto;">
-				<form class="form-grid form-grid-2" th:action="@{/studio/stations/edit}" th:object="${station}" method="POST">
+			<div class="overflow">
+				<form class="form-grid-2" th:action="@{/studio/stations/edit}" th:object="${station}" method="POST">
 	        		<span th:if="${exists}">ID:</span>
-					<div th:if="${exists}" class="mg-b"><span class="transparent-blue r-1" style="padding: 0px 5px; font-size: 18px;" th:text="${station.id}"></span></div>
+					<div th:if="${exists}"><span class="transparent-blue r-5" style="padding: 0px 5px; font-size: 18px;"  th:text="${station.id}"></span></div>
 	        		<span th:style="${exists} ? 'display: none' : ''">ID:</span>
 					<input th:style="${exists} ? 'display: none' : ''" type="text" th:field="*{id}" required>
 	        		<span>Name:</span>
 					<input type="text" th:field="*{name}" required>
 					<span>Platfroms:</span>
 					<input type="number" th:field="*{platforms}" min="1" max="99" value="1" required>
-					<a th:if="${exists}" class="button red mg-0 width-100"  th:href="@{'/studio/stations/delete?id=' + ${station.id}}">Delete</a>
-					<a th:unless="${exists}" class="button red mg-0 width-100" href="/studio/stations">Cancel</a>
-					<input type="submit" value="Save" class="mg-0">
+					<a th:if="${exists}" class="button red width-100"  th:href="@{'/studio/stations/delete?id=' + ${station.id}}">Delete</a>
+					<a th:unless="${exists}" class="button red width-100" href="/studio/stations">Cancel</a>
+					<input type="submit" value="Save">
 	        	</form>
 			</div>
         </div>
