--- a/resources/templates/studio/edit/edit_users.html
+++ b/resources/templates/studio/edit/edit_users.html
@@ -10,9 +10,9 @@
 
 		<div th:replace="components :: navigation"></div>
 		<script>setNavigationFocus("Users")</script>
-		<div class="navigation-content overflow" style="padding: 50px 20px;" th:with="exists=${user.id != null and !user.id.isEmpty()}">
-			<div class="blue-border r-2 fit-content" style="margin: 0 auto;">
-				<form class="form-grid form-grid-2" th:action="@{/studio/users/edit}" th:object="${user}" method="POST">
+		<div class="navigation-content" style="padding: 50px 20px;" th:with="exists=${user.id != null and !user.id.isEmpty()}">
+			<div class="overflow">
+				<form class="form-grid-2" th:action="@{/studio/users/edit}" th:object="${user}" method="POST">
 	        		<span th:if="${exists}">ID:</span>
 					<div th:if="${exists}" class="mg-b"><span class="transparent-blue r-1" style="padding: 0px 5px; font-size: 18px;" th:text="${user.id}"></span></div>
 	        		<span th:style="${exists} ? 'display: none' : ''">ID:</span>
@@ -24,9 +24,9 @@
 					<span>Roles:</span>
 					<input type="text" th:field="*{roles}" required>
 					<span>Password:</span>
-					<div class="mg-b"><a th:href="@{'/password?id=' + ${user.id}}">Change Password</a></div>
-					<a th:if="${exists}" class="button red mg-0 width-100" th:href="@{'/studio/users/delete?id=' + ${user.id}}">Delete</a>
-					<a th:unless="${exists}" class="button red mg-0 width-100" href="/studio/users">Cancel</a>
+					<a th:href="@{'/password?id=' + ${user.id}}">Change Password</a>
+					<a th:if="${exists}" class="button red width-100" th:href="@{'/studio/users/delete?id=' + ${user.id}}">Delete</a>
+					<a th:unless="${exists}" class="button red width-100" href="/studio/users">Cancel</a>
 					<input type="submit" value="Save" class="mg-0">
 					<input style="display: none;" type="text" th:field="*{password}">
 					<input style="display: none;" type="text" th:field="*{forcePasswordChange}">
