--- a/resources/templates/line.html
+++ b/resources/templates/line.html
@@ -42,7 +42,7 @@
 				</table>
 				<div style="display:flex; gap: 20px;">
 					<div class="width-100">
-						<span>ID: </span><span class="transparent-blue" style="padding: 0px 5px; border-radius: 5px;" th:text="${line.id}"></span><br>
+						<span>ID: </span><span class="transparent-blue id" th:text="${line.id}"></span><br>
 						<span>Type: </span><i th:text="${line.type.getName()}"></i><br>
 						<span>Number: </span><i th:text="${line.number}"></i><br>
 						<span>Operator: </span><i th:text="${line.operator}"></i><br>
