--- a/resources/templates/studio/edit/edit_lines.html
+++ b/resources/templates/studio/edit/edit_lines.html
@@ -15,7 +15,7 @@
 				<div class="overflow"></div>
 					<div class="form-grid-4">
 						<span>ID:</span>
-						<div><span class="transparent-blue r-1" style="padding: 0px 5px; font-size: 18px;" th:text="${exists ? line.id : 'auto'}"></span></div>
+						<div><span class="transparent-blue id" th:text="${exists ? line.id : 'auto'}"></span></div>
 						<input style="display: none" type="text" th:field="*{id}">
 						<span>Type:</span>
 						<select th:field="*{type}">
