--- a/resources/templates/studio/edit/edit_stations.html
+++ b/resources/templates/studio/edit/edit_stations.html
@@ -14,7 +14,7 @@
 			<div class="overflow">
 				<form class="form-grid-2" th:action="@{/studio/stations/edit}" th:object="${station}" method="POST">
 	        		<span th:if="${exists}">ID:</span>
-					<div th:if="${exists}"><span class="transparent-blue r-5" style="padding: 0px 5px; font-size: 18px;"  th:text="${station.id}"></span></div>
+					<div th:if="${exists}"><span class="transparent-blue id" th:text="${station.id}"></span></div>
 	        		<span th:style="${exists} ? 'display: none' : ''">ID:</span>
 					<input th:style="${exists} ? 'display: none' : ''" type="text" th:field="*{id}" required>
 	        		<span>Name:</span>
