--- a/resources/templates/studio/edit/edit_users.html
+++ b/resources/templates/studio/edit/edit_users.html
@@ -14,7 +14,7 @@
 			<div class="overflow">
 				<form class="form-grid-2" th:action="@{/studio/users/edit}" th:object="${user}" method="POST">
 	        		<span th:if="${exists}">ID:</span>
-					<div th:if="${exists}" class="mg-b"><span class="transparent-blue r-1" style="padding: 0px 5px; font-size: 18px;" th:text="${user.id}"></span></div>
+					<div th:if="${exists}" class="mg-b"><span class="transparent-blue id" th:text="${user.id}"></span></div>
 	        		<span th:style="${exists} ? 'display: none' : ''">ID:</span>
 					<input th:style="${exists} ? 'display: none' : ''" type="text" th:field="*{id}" required>
 	        		<span>Name:</span>
