--- a/resources/templates/studio/stations.html
+++ b/resources/templates/studio/stations.html
@@ -11,26 +11,24 @@
 		<div th:replace="components :: navigation"></div>
 		<script>setNavigationFocus("Stations")</script>
 		<div class="navigation-content">
-			<div style="margin: 0px auto; padding: 50px 50px; max-width: 1200px;">
+			<div style="margin: 0px auto; padding: 50px 20px; max-width: 1200px;">
 				<div style="display: flex;"><div class="width-100"></div>
 					<a class="button mg-b" th:href="@{/studio/stations/edit}">New Station</a>
-				</div>	
-				<div class="overflow r-1 nowrap">
-					<table id="reload">
-						<tr th:if="!${stations.isEmpty()}">
-							<th>ID</th>
-							<th class='width-100'>Name</th>
-							<th>Platforms</th>
-							<th></th>
-						</tr>
-						<tr th:each="station : ${stations}">
-							<td><span class="transparent-blue r-1" style="padding: 0px 5px;" th:text="${station.id}"></span></td>
-							<td th:text="${station.name}"></td>
-							<td th:text="${station.platforms}"></td>
-							<td><a class="button" th:href="@{'/studio/stations/edit?id=' + ${station.id}}">Edit</a></td>
-						</tr>
-					</table>
 				</div>
+				<div class="overflow nowrap">
+					<div class="table-grid" style="grid-template-columns: fit-content(100px) auto repeat(2, fit-content(100px));">
+						<div class="grey">ID</div>
+						<div class="grey">Name</div>
+						<div class="grey">Platforms</div>
+						<div class="grey"></div>
+						<div th:each="station : ${stations}" class="content">
+							<div><span class="transparent-blue id" th:text="${station.id}"></span></div>
+							<div th:text="${station.name}"></div>
+							<div th:text="${station.platforms}"></div>
+							<div><a class="button" th:href="@{'/studio/stations/edit?id=' + ${station.id}}">Edit</a></div>
+						</div>
+					</div>
+				<div>
 			</div>
 		</div>
 
